--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,10 @@ add_subdirectory (GameControl)
 add_subdirectory (Entity)
 add_subdirectory (SurfaceX)
 
+find_package (SDL REQUIRED)
+find_package (SDL_image REQUIRED)
+
+
 set (CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} --std=c++11)
 
 add_library (JERonimo ${SOURCES})
