Cleaned up CMakeLists.txts

--- a/GameControl/CMakeLists.txt
+++ b/GameControl/CMakeLists.txt
@@ -1,1 +1,6 @@
-set(SOURCES ${SOURCES} GameControl/App.cpp GameControl/DataManager.cpp GameControl/GameLoop.cpp GameControl/Events.cpp PARENT_SCOPE)
+set (SOURCES ${SOURCES}
+  GameControl/App.cpp
+  GameControl/DataManager.cpp
+  GameControl/GameLoop.cpp
+  GameControl/Events.cpp
+  PARENT_SCOPE)
