--- a/Space2D/CMakeLists.txt
+++ b/Space2D/CMakeLists.txt
@@ -1,2 +1,4 @@
-set (SOURCES ${SOURCES} Space2D/Point.cpp Space2D/Space2D.cpp Space2D/Vector.cpp Space2D/Velocity.cpp PARENT_SCOPE)
+set (SOURCES ${SOURCES} 
+  Space2D/Declarations.cpp
+  PARENT_SCOPE)
 
