--- a/SurfaceX/CMakeLists.txt
+++ b/SurfaceX/CMakeLists.txt
@@ -1,1 +1,7 @@
-set (SOURCES ${SOURCES} SurfaceX/SurfaceX.cpp SurfaceX/SimpleSurf.cpp SurfaceX/DoubleSurf.cpp SurfaceX/SafeSurf.cpp PARENT_SCOPE)
+set (SOURCES ${SOURCES}
+  SurfaceX/SurfaceX.cpp
+  SurfaceX/SimpleSurf.cpp
+  SurfaceX/DoubleSurf.cpp
+  SurfaceX/SafeSurf.cpp
+  SurfaceX/CanvasSurf.cpp
+  PARENT_SCOPE)
