Modifies structure for windows build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required (VERSION 2.6)
+#set (CMAKE_C_COMPILER gcc)
+#set (CMAKE_CXX_COMPILER g++)
+
 project (JERonimo)
 
 include_directories (.)
@@ -17,4 +20,4 @@ find_package (SDL_image REQUIRED)
 set (CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} --std=c++11)
 
 add_library (JERonimo SHARED ${SOURCES})
-target_link_libraries (JERonimo SDL SDL_image SDL_gfx)
+target_link_libraries (JERonimo SDL SDL_image)
