Configures cmake with custom test build targets and ignores them

--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,7 @@ SDL/*
 config.log
 doc/*
 *-swp
-GAMEFRAME
-GameLoopTest
-TestEventsTest
-DoubleSurfTest
-EDIT_SURFACEX
-EDIT_SPACE2D
+*Test
 *~
 .ninja_deps
 .ninja_log
