--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,12 @@ project (JERonimo)
 
 include_directories (.)
 
+set (SUBDIRS Space2D SurfaceX ControlInterfaces)
+
 set (SOURCES)
-add_subdirectory (Space2D)
-add_subdirectory (Entity)
-add_subdirectory (SurfaceX)
-add_subdirectory (ControlInterfaces)
+foreach(subdir ${SUBDIRS})
+    add_subdirectory(${subdir})
+endforeach(subdir)
 
 set (SDL_BUILDING_LIBRARY true)
 find_package (SDL REQUIRED)
@@ -21,17 +22,25 @@ add_library (JERonimo SHARED ${SOURCES})
 target_link_libraries (JERonimo SDL SDL_image)
 
 install (TARGETS JERonimo DESTINATION usr/local/lib)
-file(MAKE_DIRECTORY /usr/local/include/JERonimo)
-file(MAKE_DIRECTORY /url/local/include/JERonimo/Space2D)
-file(MAKE_DIRECTORY /usr/local/include/JERonimo/SurfaceX)
-file(MAKE_DIRECTORY /usr/local/include/JERonimo/ControlInterfaces)
+install (DIRECTORY DESTINATION /usr/local/include/${PROJECT_NAME})
+foreach(subdir ${SUBDIRS})
+    install(DIRECTORY DESTINATION /usr/local/include/${PROJECT_NAME}/${subdir})
+    FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/*.h")
+    install(FILES ${headers} DESTINATION /usr/local/include/${PROJECT_NAME}/${subdir})
+    install(FILES "${subdir}.h" DESTINATION /usr/local/include/${PROJECT_NAME})
+endforeach(subdir)
 
-FILE(GLOB fSpace2D "${CMAKE_CURRENT_SOURCE_DIR}/Space2D/*.h")
-FILE(GLOB fSurfaceX "${CMAKE_CURRENT_SOURCE_DIR}/SurfaceX/*.h")
-FILE(GLOB fControlInterfaces "${CMAKE_CURRENT_SOURCE_DIR}/ControlInterfaces/*.h")
-FILE(GLOB fHeaders "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+foreach(subdir ${SUBDIRS})
+    FILE(GLOB tests "${CMAKE_CURRENT_SOURCE_DIR}/test/${subdir}/*Test.cpp")
+    foreach(testFile ${tests})
+        STRING(REGEX REPLACE ".*test/${subdir}/([a-zA-Z0-9]+Test).*" "\\1" testAspect "${testFile}")
+        add_executable(${testAspect} EXCLUDE_FROM_ALL ${testFile})
+        target_link_libraries(${testAspect} ${PROJECT_NAME})
+        #add_custom_target(${testAspect}  ${testAspect} DEPENDS ${testAspect})
+    endforeach(testFile)
+endforeach(subdir)
 
-install(FILES ${fSpace2D} DESTINATION /usr/local/include/JERonimo/Space2D)
-install(FILES ${fControlInterfaces} DESTINATION /usr/local/include/JERonimo/ControlInterfaces)
-install(FILES ${fSurfaceX} DESTINATION /usr/local/include/JERonimo/SurfaceX)
-install(FILES ${fHeaders} DESTINATION /usr/local/include/JERonimo)
+#function(compile_test subdir testedComp)
+#    add_executable(${testComp} test/${subdir}/${testedComp}Test.cpp)
+#    target_link_libraries(${testComp} ${PROJECT_NAME})
+#endfunction(compile_test)
