Adds CompositeRunnable class which inherit 3 containers with pointers to Interfaces

--- a/ControlInterfaces/CMakeLists.txt
+++ b/ControlInterfaces/CMakeLists.txt
@@ -1,4 +1,5 @@
 set (SOURCES ${SOURCES}
   ControlInterfaces/ControlInterfaces.cpp
   ControlInterfaces/BaseRunnable.cpp
+  ControlInterfaces/CompositeRunnable.cpp
   PARENT_SCOPE)
