Adds support for and the FileManager class

--- a/ControlInterfaces/CMakeLists.txt
+++ b/ControlInterfaces/CMakeLists.txt
@@ -2,4 +2,5 @@ set (SOURCES ${SOURCES}
   ControlInterfaces/ControlInterfaces.cpp
   ControlInterfaces/BaseRunnable.cpp
   ControlInterfaces/CompositeRunnable.cpp
+  ControlInterfaces/FileManager.cpp
   PARENT_SCOPE)
