Changes gitignore so it only ignores test executables

--- a/.gitignore
+++ b/.gitignore
@@ -16,13 +16,11 @@ Debug/*
 .libs/*
 ipch/*
 nbproject/*
-SDL/*
 .lineno
 config.log
 doc/*
 *-swp
-*Test
-*~
+./*Test
 .ninja_deps
 .ninja_log
 CMakeCache.txt
