Ports some code and build instructions to windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,12 +32,13 @@ foreach(subdir ${SUBDIRS})
     install(FILES "${subdir}.h" DESTINATION /usr/local/include/${PROJECT_NAME})
 endforeach(subdir)
 
+message("${SDL2_LIBRARY}")
 foreach(subdir ${SUBDIRS})
     FILE(GLOB tests "${CMAKE_CURRENT_SOURCE_DIR}/test/${subdir}/*Test.cpp")
     foreach(testFile ${tests})
         STRING(REGEX REPLACE ".*test/${subdir}/([a-zA-Z0-9]+Test).*" "\\1" testAspect "${testFile}")
         add_executable(${testAspect} EXCLUDE_FROM_ALL ${testFile})
-        target_link_libraries(${testAspect} ${PROJECT_NAME})
+        target_link_libraries(${testAspect} ${PROJECT_NAME} mingw32 SDL_image SDL2main SDL2)
         #add_custom_target(${testAspect}  ${testAspect} DEPENDS ${testAspect})
     endforeach(testFile)
 endforeach(subdir)
