Adds functioning render base class and standard subclass

--- a/SDLWrappers/CMakeLists.txt
+++ b/SDLWrappers/CMakeLists.txt
@@ -2,4 +2,6 @@ set (SOURCES ${SOURCES}
   SDLWrappers/App.cpp
   SDLWrappers/Logger.cpp
   SDLWrappers/Window.cpp
+  SDLWrappers/Renderer.cpp
+  SDLWrappers/HardRenderer.cpp
   PARENT_SCOPE)
