Modifies so that mingw isn't explicitly declared like that. idiot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ foreach(subdir ${SUBDIRS})
     foreach(testFile ${tests})
         STRING(REGEX REPLACE ".*test/${subdir}/([a-zA-Z0-9]+Test).*" "\\1" testAspect "${testFile}")
         add_executable(${testAspect} EXCLUDE_FROM_ALL ${testFile})
-        target_link_libraries(${testAspect} ${PROJECT_NAME} mingw32 SDL_image SDL2main SDL2)
+        target_link_libraries(${testAspect} ${PROJECT_NAME} ${SDL2_LIBRARY} SDL2main)
         #add_custom_target(${testAspect}  ${testAspect} DEPENDS ${testAspect})
     endforeach(testFile)
 endforeach(subdir)
