Adds drawer template to the mix to make the point tracer more streamlined

--- a/SDLWrappers/CMakeLists.txt
+++ b/SDLWrappers/CMakeLists.txt
@@ -4,4 +4,5 @@ set (SOURCES ${SOURCES}
   SDLWrappers/Window.cpp
   SDLWrappers/Renderer.cpp
   SDLWrappers/HardRenderer.cpp
+  SDLWrappers/SDLWrappers.cpp
   PARENT_SCOPE)
