--- a/SDLWrappers/CMakeLists.txt
+++ b/SDLWrappers/CMakeLists.txt
@@ -5,4 +5,6 @@ set (SOURCES ${SOURCES}
   SDLWrappers/Renderer.cpp
   SDLWrappers/HardRenderer.cpp
   SDLWrappers/SDLWrappers.cpp
+  SDLWrappers/Mouse.cpp
+  SDLWrappers/Keyboard.cpp
   PARENT_SCOPE)
