Reworks Surface for new framework. No test yet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project (JERonimo)
 include_directories (.)
 
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})
-set (SUBDIRS Space2D SurfaceX ControlInterfaces SDLWrappers)
+set (SUBDIRS Space2D ControlInterfaces SDLWrappers)
 
 set (SOURCES)
 foreach(subdir ${SUBDIRS})
@@ -14,14 +14,15 @@ endforeach(subdir)
 
 set (SDL2_BUILDING_LIBRARY true)
 find_package (SDL2 REQUIRED)
-find_package (SDL_image REQUIRED)
+find_package (SDL2_image REQUIRED)
 
 include_directories(${SDL2_INCLUDE_DIR})
+include_directories(${SDL2_IMAGE_INCLUDE_DIR})
 
 set (CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} --std=c++11)
 
 add_library (JERonimo SHARED ${SOURCES})
-target_link_libraries (JERonimo SDL2 SDL_image)
+target_link_libraries (JERonimo SDL2 SDL2_image)
 
 install (TARGETS JERonimo DESTINATION usr/local/lib)
 install (DIRECTORY DESTINATION /usr/local/include/${PROJECT_NAME})
@@ -32,13 +33,12 @@ foreach(subdir ${SUBDIRS})
     install(FILES "${subdir}.h" DESTINATION /usr/local/include/${PROJECT_NAME})
 endforeach(subdir)
 
-message("${SDL2_LIBRARY}")
 foreach(subdir ${SUBDIRS})
     FILE(GLOB tests "${CMAKE_CURRENT_SOURCE_DIR}/test/${subdir}/*Test.cpp")
     foreach(testFile ${tests})
         STRING(REGEX REPLACE ".*test/${subdir}/([a-zA-Z0-9]+Test).*" "\\1" testAspect "${testFile}")
         add_executable(${testAspect} EXCLUDE_FROM_ALL ${testFile})
-        target_link_libraries(${testAspect} ${PROJECT_NAME} ${SDL2_LIBRARY} SDL2main)
+        target_link_libraries(${testAspect} ${PROJECT_NAME} ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARY} SDL2main)
         #add_custom_target(${testAspect}  ${testAspect} DEPENDS ${testAspect})
     endforeach(testFile)
 endforeach(subdir)
