Finishes Texture source and creates test for it

--- a/SDLWrappers/CMakeLists.txt
+++ b/SDLWrappers/CMakeLists.txt
@@ -8,4 +8,5 @@ set (SOURCES ${SOURCES}
   SDLWrappers/EventLogger.cpp
   SDLWrappers/SDLWrappers.cpp
   SDLWrappers/Surface.cpp
+  SDLWrappers/Texture.cpp
   PARENT_SCOPE)
