Adds ScaledSurfaces which don't work so fuck

--- a/SDLWrappers/CMakeLists.txt
+++ b/SDLWrappers/CMakeLists.txt
@@ -8,5 +8,6 @@ set (SOURCES ${SOURCES}
   SDLWrappers/EventLogger.cpp
   SDLWrappers/SDLWrappers.cpp
   SDLWrappers/Surface.cpp
+  SDLWrappers/ScaledSurface.cpp
   SDLWrappers/Texture.cpp
   PARENT_SCOPE)
