Adds physics objects which implement movement and gravitation (among other forces)

--- a/GameUtilities/CMakeLists.txt
+++ b/GameUtilities/CMakeLists.txt
@@ -1,3 +1,5 @@
 set (SOURCES ${SOURCES}
   GameUtilities/Entity.cpp
+  GameUtilities/PhysicalObject.cpp
+  GameUtilities/PhysicalEntity.cpp
   PARENT_SCOPE)
