Coming up next, testing this large block of changed collision code

--- a/GameUtilities/CMakeLists.txt
+++ b/GameUtilities/CMakeLists.txt
@@ -2,4 +2,6 @@ set (SOURCES ${SOURCES}
   GameUtilities/Entity.cpp
   GameUtilities/PhysicalObject.cpp
   GameUtilities/PhysicalEntity.cpp
+  GameUtilities/CollidableShapes.cpp
+  GameUtilities/Collidable.cpp
   PARENT_SCOPE)
