Adds an FPS Manager that returns a multiplier for per millisecond values

--- a/GameUtilities/CMakeLists.txt
+++ b/GameUtilities/CMakeLists.txt
@@ -5,4 +5,5 @@ set (SOURCES ${SOURCES}
   GameUtilities/CollidableShapes.cpp
   GameUtilities/Collidable.cpp
   GameUtilities/PhysicsEngine.cpp
+  GameUtilities/FPSManager.cpp
   PARENT_SCOPE)
