Creates static object type, which can't be accelerated

--- a/GameUtilities/CMakeLists.txt
+++ b/GameUtilities/CMakeLists.txt
@@ -1,6 +1,7 @@
 set (SOURCES ${SOURCES}
   GameUtilities/Entity.cpp
   GameUtilities/PhysicalObject.cpp
+  GameUtilities/StaticObject.cpp
   GameUtilities/PhysicalEntity.cpp
   GameUtilities/CollidableShapes.cpp
   GameUtilities/Collidable.cpp
